# 3D_scanner

./: README.md
build-ex_pcl-Desktop-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  ex_pcl  ex_pcl.cbp
build-start_openni-Desktop-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  start_openni  start_openni.cbp
build-start_openni-Desktop-Default/OpenNI2/Drivers/: libFreenectDriver.so.0.5  libFreenectDriver.so.0.5.2
ex_pcl/: CMakeLists.txt
start_openni/: CMakeLists.txt  OniSampleUtilities.h  main.cpp
